Fixed the issue of white space at the bottom of the page

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body{background-image:url('./bkg.jpg');
-    background-size: cover;
+    background-size: 1500px;
     background-repeat: no-repeat;
 
 }
